css/main.css
/*
 *
 * Common
 *
 *
*/

* {
  box-sizing: border-box;
}

body {
  font: 14px Roboto, Raleway;
  margin: 0;
}

.container {
  width: 100%;
  height: 100%;
  min-width: 6810px; /* Accommodates 100 columns */
  min-height: 2334px; /* Accommodates 100 rows */
}

main {
  padding-top: 90px;
}

/*
 *
 * Header
 *
 *
*/

header {
  position: fixed;
  background: white;
  width: 100%;
  height: 90px;
  z-index: 3;
}

.header-inner {
  height: 40px;
  margin: 10px;
}

.header-logo {
  height: 40px;
  float: left;
}

.header-name {
  padding-left: 1em;
  float: left;
  text-align: left;
  margin: 0;
  font-size: 2.25em;
  color: steelblue;
}

.controls-section {
  padding-left: 5px;
}

/*
 *
 * Table
 *
 *
*/
.worksheet {
  padding-top: 5px; /* col header row */
  padding-left: 30px; /* row number col */
}

table {
  table-layout: fixed; /* keep the cell widths the same */
  border-spacing: 0px;
}

.column-header {
  width: 100%;
  left: 0px;
  position: fixed;
  background-color: white;
  z-index: 2;
}

td, th {
  border: lightgrey;
  border-style: solid;
  border-width: 0.5px;
  width: 68px;
}

tr {
  height: 22px;
}

.row-width {
  width: 30px;
}

.row-number-section {
  top: 112px;
  position: fixed;
  z-index: 1;
}

input {
  width: 68px;
  padding: 0px;
  margin: 0px;
  border: none;
}

